--- a/Assessment.html
+++ b/Assessment.html
@@ -4,41 +4,27 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>CSS Level One - Assessment</title>
-		<link rel="stylesheet" href="assessment.css" />
+		<title>Assessment CSS Level Two</title>
+		<link rel="stylesheet" href="Assessment.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Rubik+Distressed&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
-		<h1>Welcome to Free Blog</h1>
-		<div>
-			<p>Thanks so much for visiting this site</p>
-			<h2>What is this site is for?</h2>
-			<ul>
-				<li id="itemone">Take in text input</li>
-				<li>Take in Log In information</li>
-				<li>
-					<a href="https://www.google.com" target="_blank">
-						Take in google information
-					</a>
-				</li>
-			</ul>
-
-			<textarea name="" id="textblock" cols="80" rows="8"></textarea>
-			<h2>Please Log In to save your Blog Posts</h2>
-
-			<label for="useremail">Email:</label>
-			<input type="email" id="useremail" placeholder="" />
-
-			<label for="userpassword">Password:</label>
-			<input type="password" id="userpassword" placeholder="" />
-
-			<input type="submit" value="Log In" />
-
-			<div class="exit">
-				<p>Questions or Comments? Send us feedback here.</p>
-				<textarea name="" id="" cols="50" rows="5"></textarea>
-				<p></p>
-				<input type="submit" value="Submit" />
-			</div>
+		<div class="container">
+			<table class="table">
+				<h1>Inspired By Spectrum V By The Artist Ellsworth Kelly</h1>
+				<tr>
+					<td class="td" id="column1"></td>
+					<td class="td" id="column2"></td>
+					<td class="td" id="column3"></td>
+					<td class="td" id="column4"></td>
+					<td class="td" id="column5"></td>
+				</tr>
+			</table>
 		</div>
 	</body>
 </html>
